# desalkila

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Intro.ipynb  LICENSE  README.md  dev-requirements.in  dev-requirements.txt  docker-compose.yaml  geocode.py  pyproject.toml  requirements.in  requirements.txt  tox.ini
.github/workflows/: callejero.yml  publish.yml  registro-cam.yml  rtd-preview.yml  test.yml
conf/base/: catalog.yml  catalog_matchings.yml  catalog_primary.yml  catalog_raw.yml  catalog_source.yml  parameters_el_callejero.yml
conf/dev/: credentials.yml  globals.yml
conf/prod/: globals.yml
docs/source/: conf.py
src/desalkila/: __init__.py  pipeline_registry.py  settings.py
src/desalkila/datasets/: __init__.py  geopandas.py  polars.py
src/desalkila/pipelines/: consolidate_airbnb.py  consolidate_callejero.py  consolidate_registro_cam.py  consolidate_vut_madrid.py  el_airbnb.py  el_barrios.py  el_callejero.py  el_registro_cam.py  el_vut_madrid.py  match_registro_cam.py
tests/: test_import.py
tests/pipelines/: test_el_callejero.py
